ETSL-953 Footer alignment fixes

--- a/ui.frontend/src/main/webpack/global/styles/components/footer/footer.scss
+++ b/ui.frontend/src/main/webpack/global/styles/components/footer/footer.scss
@@ -251,6 +251,10 @@
     margin: toRem(15) 0 toRem(8) !important;
   }
 
+   @include respond-to-max($tablet) {
+    padding: toRem(10) toRem(8) 0 !important;
+   }
+
   @include respond-to-min($desktop) {
     margin: toRem(16) 0 toRem(16) !important;
     text-align: left;
